@@ -1,3 +1,7 @@
+2006-05-24  Harri Pitkänen  <hatapitk@iki.fi>
+
+	* Word splitting suggestions
+
 2006-05-23  Harri Pitkänen  <hatapitk@iki.fi>
 
 	* Vowel changing suggestions
